# indoor-localisation-accuracy-testing

./: README.md
ArUCo-markers-cv-localisation-method/: .gitignore  README.md  api.py  calibrate_camera.py  measure_locations.py  pyproject.toml  requirements.txt
ArUCo-markers-cv-localisation-method/aruco_markers_computer_vision/: detect_aruco_images.py  detect_aruco_video.py  generate_aruco_tags.py  utils.py
ArUCo-markers-cv-localisation-method/calculating_location/: coordinates_conversions.py  main.py  pose_estimation.py
ArUCo-markers-cv-localisation-method/camera_calibration/: __init__.py
ArUCo-markers-cv-localisation-method/image_video_conversion/: __init__.py
ArUCo-markers-cv-localisation-method/mega/: errors.py  mega.py
ArUCo-markers-cv-localisation-method/src/: calibrate_camera.py
ArUCo-markers-cv-localisation-method/src/aruco_markers_cv_localisation_arnard76/: .gitignore
ArUCo-markers-cv-localisation-method/src/aruco_markers_cv_localisation_arnard76/aruco_markers_computer_vision/: detect_aruco_images.py  detect_aruco_video.py  generate_aruco_tags.py
ArUCo-markers-cv-localisation-method/src/aruco_markers_cv_localisation_arnard76/calculating_location/: main.py  pose_estimation.py
ArUCo-markers-cv-localisation-method/src/aruco_markers_cv_localisation_arnard76/camera_calibration/: camera.py
ArUCo-markers-cv-localisation-method/src/aruco_markers_cv_localisation_arnard76/mega/: errors.py  mega.py
ArUCo-markers-cv-localisation-method/src/camera_calibration/previously_calibrated_cameras/Arnav phone/: intrinsic_matrix.npy
(+38 files in other folders)
